care-australia-uat/force-app/main/default/objects/Stripe_Setting__c/Stripe_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To handle settings for stripe integration</description>
    <label>Stripe Setting</label>
</CustomObject>