care-australia-uat/force-app/main/default/objects/Stripe_Setting__c/fields/Default_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Default_Campaign__c</fullName>
    <label>Default Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>