care-australia-uat/force-app/main/default/objects/Stripe_Setting__c/fields/Default_Contact__c.field-meta.xml
<CustomField>
    <fullName>Default_Contact__c</fullName>
    <label>Default Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>