care-australia-uat/force-app/main/default/objects/Stripe_Setting__c/fields/StripeActivationDate__c.field-meta.xml
<CustomField>
    <fullName>StripeActivationDate__c</fullName>
    <label>StripeActivationDate</label>
    <type>DateTime</type>
</CustomField>